tests/snapshots/run_wpt_conformance__trtx_lstm_float16_tensors_steps_1_with_options_bias__options_recurrentBias__options_activations___relu____relu____relu___and_options_initialCellState.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "lstm.https.any.js",
    "lstm float16 tensors steps=1 with options.bias, options.recurrentBias, options.activations=['relu', 'relu', 'relu'] and options.initialCellState",
    "trtx",
    Failed {
        msg: Some(
            "Failed to convert graph: graph conversion failed for trtx: Unsupported operation: lstm\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    lstmInitialCellState: f16[1, 2, 2];\n    lstmInput: f16[1, 2, 2];\n  }\n\n  consts {\n    operand_0: f16[1, 8] @bytes([0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64]);\n    operand_1: f16[1, 8] @bytes([0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64]);\n    operand_2: f16[1, 8, 2] @bytes([102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46]);\n    operand_5: f16[1, 8, 2] @bytes([0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192]);\n  }\n\n  nodes {\n    [lstmOutput1, lstmOutput2] = lstm(lstmInput, operand_5, operand_2, activations=[\"relu\", \"relu\", \"relu\"], bias=0, direction=\"\", initialCellState=4, initialHiddenState=null, label=\"\", layout=\"\", peepholeWeight=null, recurrentBias=1, returnSequence=false);\n  }\n\n  outputs { lstmOutput1; lstmOutput2; }\n}\n",
        ),
    },
)
